# transpara

./: .gitignore  README.md  pyproject.toml
configs/: train.yaml
configs/criterion/: ce.yaml  weighted_ce.yaml
configs/data/: chest_xray.yaml
configs/model/: cnn.yaml  mlp.yaml  resnet18.yaml
configs/optimizer/: adam.yaml
configs/training/: base.yaml
notebooks/: exploratory_data_analysis.ipynb  training_report.ipynb
scripts/: train.py
src/: __init__.py
src/configs/: schema.py
src/dataio/: __init__.py  dataset.py  transform.py  utils.py
src/gradcam/: core.py
src/models/: __init__.py  cnn.py  mlp.py  resnet.py
src/trainer/: __init__.py  launch.py  trainer.py
src/utils/: device.py
streamlit_app/: app.py  app_utils.py  requirements.txt
streamlit_app/pages/: 0_Train_Model.py  1_Try_Model.py  2_Explainability.py  3_Training_Runs.py
