[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transpara"          # just a name for the package
version = "0.0.1"
description = "Explainable AI training project"
authors = [{ name = "Your Name" }]
dependencies = [
  "pandas",
  "pillow",
  "rich",
  "pyyaml",
  "hydra-core>=1.3",
]

[tool.setuptools]
package-dir = {"" = "src"}  # tell setuptools that packages live in src/

[tool.setuptools.packages.find]
where = ["src"]             # search for packages under src/

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
